--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "chart.js": "^4.4.0",
     "cookie-es": "^1.0.0",
     "eslint-import-resolver-custom-alias": "^1.3.2",
+    "firebase": "^10.8.1",
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "2.15.0",
     "ofetch": "^1.3.3",
+    "openai": "^4.28.4",
     "pinia": "^2.1.7",
     "prismjs": "^1.29.0",
     "roboto-fontface": "^0.10.0",
